[gd_scene load_steps=3 format=3 uid="uid://dk8s7y5m1vgxi"]

[ext_resource type="Script" path="res://src/ui/menus/SettingsMenu.gd" id="1_settings"]
[ext_resource type="Texture2D" uid="uid://djrhrqllygx6x" path="res://assets/button_pack/b_1.png" id="2_button"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.18, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -320.0
offset_right = 300.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="AudioSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="VBox/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 32
text = "Audio Settings"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox/AudioSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="SFXContainer" type="HBoxContainer" parent="VBox/AudioSection"]
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="VBox/AudioSection/SFXContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Sound Effects:"
horizontal_alignment = 2

[node name="SFXToggle" type="CheckBox" parent="VBox/AudioSection/SFXContainer"]
layout_mode = 2
button_pressed = true
text = "Enabled"

[node name="SFXSlider" type="HSlider" parent="VBox/AudioSection/SFXContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXValueLabel" type="Label" parent="VBox/AudioSection/SFXContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "80%"

[node name="Spacer2" type="Control" parent="VBox/AudioSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="MusicContainer" type="HBoxContainer" parent="VBox/AudioSection"]
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="VBox/AudioSection/MusicContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Background Music:"
horizontal_alignment = 2

[node name="MusicToggle" type="CheckBox" parent="VBox/AudioSection/MusicContainer"]
layout_mode = 2
button_pressed = true
text = "Enabled"

[node name="MusicSlider" type="HSlider" parent="VBox/AudioSection/MusicContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
max_value = 100.0
step = 1.0
value = 60.0

[node name="MusicValueLabel" type="Label" parent="VBox/AudioSection/MusicContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "60%"

[node name="Spacer3" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="PlayerSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="VBox/PlayerSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 32
text = "Player Settings"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox/PlayerSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="NameContainer" type="HBoxContainer" parent="VBox/PlayerSection"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="VBox/PlayerSection/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Player Name:"
horizontal_alignment = 2

[node name="NameInput" type="LineEdit" parent="VBox/PlayerSection/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 40)
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter your name..."
max_length = 20
select_all_on_focus = true

[node name="NameApplyButton" type="Button" parent="VBox/PlayerSection/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
theme_override_font_sizes/font_size = 16
text = "Apply"

[node name="NameStatusLabel" type="Label" parent="VBox/PlayerSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Current: No name set"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ButtonContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="VBox/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(180, 50)
theme_override_font_sizes/font_size = 16
text = "Reset to Default"

[node name="Spacer4" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(150, 60)
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="DebugLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 600.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Settings saved automatically
Player name syncs across all game systems
Volume changes applied instantly" 